<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DemoDataType" Id="{158dc518-f97f-4d55-9224-fc6c8c8f5c68}">
    <Declaration><![CDATA[TYPE ST_DemoDataType :
STRUCT
	sString	: STRING;
	nNumber : UDINT;
	nFloat	: REAL;
	aBuffer : ARRAY[0..15] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>