<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_CreateDemoData" Id="{af39f222-3765-4a37-befb-b37820a5bd67}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_CreateDemoData : ST_DemoDataType
VAR_INPUT
END_VAR
VAR
	i : UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_CreateDemoData.fFloat := -1.23456789;
F_CreateDemoData.nNumber := 16#DEADBEEF;
F_CreateDemoData.sString := 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy';
FOR i:= 0 TO SIZEOF(F_CreateDemoData.aBuffer) DO
	F_CreateDemoData.aBuffer[i] := TO_BYTE(i + 1);
END_FOR]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>